Implementação do index e da lógica do index da extensao

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
  <html>
  <head>
- <title>Background Page</title>
- 
+ 	<title>Background Page</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  </head>
  <body>
  	<div class="janela" style="width: 240px; text-align: center; padding: 10px 20px 20px 20px">
@@ -15,6 +15,7 @@
 	 	</div>
 	 	
  	</div>
+	<script type="module" src="/src/popup/main.js"></script>
  </body>
 
  </html>
